--- a/environment.yml
+++ b/environment.yml
@@ -20,6 +20,6 @@ dependencies:
     - xgboost==1.6.1
     - protobuf==3.20.1
 
-# this is a test addition
+# This is a test addition
 # This is another test
 # This is a third test
